src/objects/Google_Map_API__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>API_Key__c</fullName>
        <description>Google MAP API</description>
        <inlineHelpText>Google MAP API</inlineHelpText>
        <label>API Key</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isExecuteAccount__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Execute for Account?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isExecuteContact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Execute for Contact?</label>
        <type>Checkbox</type>
    </fields>
    <label>Google Map API</label>
</CustomObject>